Fix game container alignment

--- a/packages/markwiemer.com/public/games/styles.css
+++ b/packages/markwiemer.com/public/games/styles.css
@@ -7,3 +7,8 @@
 .gameCanvas {
   outline: 1px solid white;
 }
+
+div {
+  display: flex;
+  flex-direction: column;
+}
